# AccuReverse-ScanToSolid

./: .gitignore  CMakeLists.txt  README.md  config.json  vcpkg.json
.github/workflows/: build.yml
benchmarks/: run_benchmarks.sh  validate.py
docs/: usage.md  usage.md.txt
src/: accureverse.cpp
tests/: Six-Lobed Coupling Element (Mechanical Component).stl
