cmake_minimum_required(VERSION 3.20)
project(AccuReverse-ScanToSolid)
set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "Vcpkg toolchain file")
find_package(nlohmann_json CONFIG REQUIRED)
find_package(OpenCASCADE CONFIG REQUIRED)
find_package(PCL CONFIG REQUIRED COMPONENTS common io visualization surface)
add_executable(accureverse src/accureverse.cpp)
target_link_libraries(accureverse PRIVATE nlohmann_json::nlohmann_json OpenCASCADE::OpenCASCADE PCL::PCL)
enable_testing()
file(GLOB TEST_FILES tests/*.stl tests/*.obj tests/*.igs)
foreach(TEST_FILE ${TEST_FILES})
  get_filename_component(TEST_NAME ${TEST_FILE} NAME_WE)
  add_test(NAME ${TEST_NAME} COMMAND accureverse config.json ${TEST_FILE})
endforeach()